memelord-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laas-memelord-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laas-memelord-app
  template:
    metadata:
      labels:
        app: laas-memelord-app
    spec:
      containers:
        - name: memelord
          image: ghcr.io/l4rm4nd/memelord:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: laas-memelord
spec:
  type: ClusterIP
  selector:
    app: laas-memelord-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laas-memelord
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: laas-memelord.ee-lte-1.codemowers.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: laas-memelord
                port:
                  number: 80
  tls:
    - secretName: laas-memelord-tls
